
mixture version 2.0.1 2021-01-15:

- Fixes for solaris.

mixture version 2.0.0 2021-01-11:

- Cpp used.
- Missing data implemented. 
- Mixtures with skewed components (via variance-mean mixtures) added.