@@ -1,3 +1,6 @@
+mixture version 2.0.2 2021-01-17:
+
+- Edits to configure file.
 
 mixture version 2.0.1 2021-01-15:
 
